@@ -183,3 +183,6 @@ TSAN=@tsan@
 # Contains TSan-specific runtime files, or nothing if TSan support is
 # disabled
 TSAN_NATIVE_RUNTIME_C_SOURCES = @tsan_native_runtime_c_sources@
+
+# OCaml release number, relative to 3.12 (used for RuntimeID)
+OCAML_RELEASE_NUMBER = @OCAML_RELEASE_NUMBER@
