@@ -34,6 +34,10 @@ m4_define([OCAML__DEVELOPMENT_VERSION], [true])
 m4_define([OCAML__VERSION_MAJOR], [5])
 m4_define([OCAML__VERSION_MINOR], [4])
 m4_define([OCAML__VERSION_PATCHLEVEL], [0])
+
+# OCAML__RELEASE_NUMBER must be incremented with each minor release.
+m4_define([OCAML__RELEASE_NUMBER], [20])
+
 # Note that the OCAML__VERSION_EXTRA string defined below is always empty
 # for officially-released versions of OCaml.
 m4_define([OCAML__VERSION_EXTRA], [dev0-2024-08-25])
