@@ -68,6 +68,9 @@ let align_int64 = @align_int64@
 let function_sections = @function_sections@
 let afl_instrument = @afl@
 
+let bytecode_runtime_id = {@QS@|@bytecode_runtime_id@|@QS@}
+let native_runtime_id = {@QS@|@native_runtime_id@|@QS@}
+
 let native_compiler = @native_compiler@
 
 let architecture = {@QS@|@arch@|@QS@}
